[package]
name = "dupe-be-gone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
rayon = "1.6.1"
sha2 = "0.10.6"

[[bin]]
name = "dupe-be-gone"
path = "src/main.rs"