[package]
name = "dupe-be-gone"
version = "0.0.2"
edition = "2021"
description = "A Multi-threaded duplicate file cleaner usuable as a CLI application."
license = "GPL-3.0"
keywords = ["cli", "duplicate-detection", "duplicate"]
repository = "https://github.com/nullscry/dupe-be-gone"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
rayon = "1.6.1"
sha2 = "0.10.6"

[[bin]]
name = "dupe-be-gone"
path = "src/main.rs"